--- a/index.Rmd
+++ b/index.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Practical machine learning project - Human activity recognition"
 author: "Laurent Kalfon"
-date: "19 décembre 2015"
+date: "19 dÃ©cembre 2015"
 output: html_document
 ---
 
